# stage

./: .gitignore  README.md  pyproject.toml
audio/: .gitignore  README.md
audio/drums/: sample1-desc.txt
src/lag/: config.py  hyperparameters.py
src/lag/cocola/: contrastive_model.py  feature_extraction.py
src/lag/conditioning/: __init__.py  beat_embedder.py  clap_embedder.py  condition_dispatcher.py  condition_provider.py  conditioning_method.py  embedded_condition.py  embedder.py  prompt_processor.py  t5embedder.py
src/lag/data/: auto_labelling.py  dataset_mixed.py  stemmed_datamodule.py  stemmed_dataset.py
src/lag/eval/: beats_eval.py  evaluation.py
src/lag/experiments/: bard.py  bart.py  benchmark.py  camille_bass.py  camille_drums.py  camille_guitar.py  debugtrain.py  diana_drums.py  elise.py  encodec_causality.py  fiora_drums.py  galio_drums.py  galio_drums_moises.py  hwei.py  irelia.py  jinx.py  kaisa.py  leblanc_solocontext.py  mel_solocontextbeat.py  nautilus.py  test.py
src/lag/models/: encodec.py  lightning_musicgen.py  musicgen_lm.py
src/lag/preprocessing/: extract_beats.py
src/lag/tests/: convert_checkpoint.py  test_inference.py  test_melody.py  test_nans.py  test_step.py
src/lag/training/: callback.py  train.py
src/lag/utils/: audio.py  aws.py  logging.py  plotting.py  transfer.py
src/stage/: __init__.py  config.py  hyperparameters.py  inference.py  loader.py  train_stage_drums.py
src/stage/conditioning/: __init__.py  beat_embedder.py  clap_embedder.py  condition_dispatcher.py  condition_provider.py  condition_type.py  embedder.py  (+2 more)
(+25 files in other folders)
