[project]
name = "stage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Giorgio Strano", email = "giorgiopuntostrano@gmail.com" }
]
requires-python = ">=3.10.14"
dependencies = [
    "frozendict>=2.4.6",
    "ipython>=8.37.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "laion-clap>=1.1.7",
    "librosa>=0.11.0",
    "lightning>=2.5.2",
    "loralib>=0.1.2",
    "matplotlib>=3.10.3",
    "pylibrb>=0.1.2",
    "sentencepiece>=0.2.0",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.1",
    "wandb>=0.21.0",
    "x-transformers==1.26.0",
]

[project.scripts]
stage = "stage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
